import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'com.gradleup.shadow' version '8.3.0'
    id 'java'
}

group 'net.advancedplugins.utils'
version '1.0.0'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "papermc"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    maven {
        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'

    }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.andrei1058.dev/releases/' }
    maven { url 'https://repo.codemc.org/repository/maven-public/' } // Some CodeCo stuff
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
    maven { url 'https://ci.ender.zone/plugin/repository/everything/' } // factionsuuid

    // PlotSquared
    maven {
        name = "EngineHub"
        url = uri("https://maven.enginehub.org/repo/")
    }
    maven {
        name = "OSS Sonatype"
        url = uri("https://oss.sonatype.org/content/repositories/snapshots/")

    }
    maven {
        name = 'griefdefender'
        url = 'https://repo.glaremasters.me/repository/bloodshot'
    }


    maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
    maven { url 'https://repo.codemc.org/repository/maven-public' } // ASkyBlock
    maven { url 'https://repo.citizensnpcs.co/' } // Citizens
    maven { url 'https://bitbucket.org/kangarko/libraries/raw/master' } // All mineacademy, e.g BossTM


    maven { url = 'https://repo.viaversion.com' }
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0-M2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0-M2'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
    // load before spigot
    testImplementation 'com.github.seeseemelk:MockBukkit-v1.20:3.9.0'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    compileOnly fileTree(include: ['*.jar'], dir: 'libs') // Add everything in the libs folder.
//    compileOnly group: 'com.sk89q.worldguard', name: 'worldguard-bukkit', version: '7.0.5'
//    compileOnly group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.2.5'
    compileOnly "net.kyori:adventure-platform-bukkit:4.3.3"
    compileOnly 'net.kyori:adventure-text-minimessage:4.17.0'
    compileOnly 'commons-lang:commons-lang:2.6'
    compileOnly 'org.apache.commons:commons-math3:3.6.1'
    compileOnly group: 'com.massivecraft', name: 'Factions', version: '1.6.9.5-U0.6.28'
    compileOnly group: 'com.github.angeschossen', name: 'LandsAPI', version: '6.29.12'
    compileOnly group: 'com.griefdefender', name: 'api', version: '2.1.0-SNAPSHOT'
    compileOnly 'dev.espi:protectionstones:2.10.2'
//    compileOnly 'com.github.SaberLLC:Saber-Factions:4.1.2-STABLE'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    compileOnly "com.viaversion:viaversion-api:5.0.3"

    compileOnly "com.mojang:datafixerupper:4.0.26"
//    compileOnly "org.spigotmc:spigot:1.20.4-R0.1-SNAPSHOT"
    //compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
//    compileOnly("io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT")
    compileOnly "org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT"

    compileOnly 'org.xerial:sqlite-jdbc:3.49.1.0'
    compileOnly 'com.j256.ormlite:ormlite-jdbc:6.1'
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('--release')
    options.compilerArgs.add('17')
}
processResources {
    expand project.properties
    filter ReplaceTokens, tokens: [
            "version": project.property("version"),
            "date"   : getDate()
    ]
}

shadowJar {
}

static def getDate() {
    def date = new Date()
    def formattedDate = date.format('dd/MM/yyyy')
    return formattedDate
}